@@ -1,3 +1,7 @@
+2009-08-21  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Main.cs: Track api changes.
+
 2009-08-20  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Main.cs: Track api changes.
